--- a/Lab02/Task2/app/src/main/res/layout/activity_main.xml
+++ b/Lab02/Task2/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nhập tên: "
+            android:text="@string/nhap_ten"
             android:textSize="18sp"
             android:layout_gravity="center_vertical"/>
 
@@ -27,13 +27,12 @@
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
-    <!-- Cập nhật layout_margin và gravity -->
     <Button
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="Nhập"
+        android:text="@string/nhap"
         android:layout_gravity="center"/>
 
     <TextView
