--- a/Lab02/Task2/app/src/main/res/layout/list_view_item.xml
+++ b/Lab02/Task2/app/src/main/res/layout/list_view_item.xml
@@ -13,6 +13,7 @@
         android:layout_height="60dp"
         android:gravity="center_vertical"
         android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textSize="20sp"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
