--- a/Lab02/Task3/app/src/main/res/layout/list_view_item.xml
+++ b/Lab02/Task3/app/src/main/res/layout/list_view_item.xml
@@ -12,6 +12,7 @@
         android:layout_height="60dp"
         android:gravity="center_vertical"
         android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textSize="15sp"
         android:text="ThuyTrang"
         app:layout_constraintBottom_toBottomOf="parent"
