--- a/Lab02/app/src/main/res/layout/list_view_item.xml
+++ b/Lab02/app/src/main/res/layout/list_view_item.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:background="@drawable/list_item_background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv"
@@ -13,11 +14,9 @@
         android:layout_height="60dp"
         android:gravity="center_vertical"
         android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:textSize="20sp"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center_vertical" />
 
 </LinearLayout>
